fixed stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ body {
 }
 
 .col.middle {
-    width: 49%;
+    width: 48%;
     padding: 5px 15px;
     margin: auto;
 }
